--- a/gym.css
+++ b/gym.css
@@ -5,7 +5,7 @@
 }
 body
 {
-  background-image: url(images/gym.jpg);
+  background-image: url(gym.jpg);
   background-repeat: no-repeat;
   height:auto;
   width:auto;
